added paragraph to file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </li>
         </ul>
     </nav>
-    <!-- Add main tag here -->
+    <h1>Hello world! :)</h1>>
+    <p>More changes</p>
 </body>
 </html>
